# agentic-marketing

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/analytics/campaigns/: route.ts
frontend/app/api/analytics/summary/: route.ts
frontend/app/api/pipeline/: route.ts
frontend/app/settings/: page.tsx
frontend/components/analytics/: MetricCard.tsx  PlatformBarChart.tsx  PostsTable.tsx
frontend/lib/: analytics.ts
pipeline_defs/: agentic-marketing.yaml
skills/meta/: decision-logger.md  reviewer.md
skills/pipelines/marketing/: ad-creative-director.md  analytics-director.md  brief-director.md  copy-director.md  creative-director.md  email-director.md  marketing-director.md  publish-director.md  repurpose-director.md  research-director.md  strategy-director.md  targeting-director.md
src/agentic_marketing/: __init__.py  api.py  budget.py  config.py  logging_.py  models.py  multi_tenant.py  pipeline_loader.py  server.py  state.py  vectorstore.py
src/agentic_marketing/agents/: copy_agent.py  creative_agent.py  marketing_agent.py  repurpose_agent.py
src/agentic_marketing/api/: analytics_api.py
src/agentic_marketing/chains/: copy_chain.py  publish_chain.py  research_chain.py  review_chain.py
src/agentic_marketing/db/: __init__.py  connection.py  qdrant.py  schema.py
src/agentic_marketing/llm/: __init__.py  client.py  embedding.py
src/agentic_marketing/pipeline/: engine.py
src/agentic_marketing/review/: chai_reviewer.py  moderation.py  quality_gates.py
src/agentic_marketing/social/: analytics.py  buffer_client.py  facebook_client.py  linkedin_client.py  publish_manager.py  twitter_client.py
src/agentic_marketing/tools/: flux_tool.py  publish_tools.py  search_tools.py
src/agentic_marketing/utils/: __init__.py
src/agentic_marketing/workflows/: publish_workflow.py  review_workflow.py
