[project]
name = "agentic-marketing"
version = "0.1.0"
description = "LLM-driven full-funnel marketing content pipeline with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agentic Marketing Team", email = "team@example.com"}
]
keywords = ["marketing", "llm", "langchain", "langgraph", "content-generation", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jsonschema>=4.23.0",
    "python-dotenv>=1.0.0",
    # Database
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pymongo>=4.9.0",
    # Vector store
    "qdrant-client>=1.12.0",
    # HTTP
    "httpx>=0.27.0",
    "requests>=2.32.0",
    # Resiliency
    "tenacity>=9.0.0",
    # Logging
    "structlog>=24.0.0",
    # Social media
    "tweepy>=4.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "hypothesis>=6.115.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.urls]
Homepage = "https://github.com/n00n0i/agentic-marketing"
Repository = "https://github.com/n00n0i/agentic-marketing"
Documentation = "https://github.com/n00n0i/agentic-marketing#readme"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src", "/schemas", "/skills", "/pipeline_defs"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_marketing"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B028"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
timeout = 60

[tool.coverage.run]
source = ["src/agentic_marketing"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]